# KABOL-AI-UKR-ENG-stt-tts

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: default.yaml
config/profiles/: cpu.yaml  gpu_full.yaml  gpu_light.yaml
installer/: build.bat  installer.iss  kabolai.spec
scripts/: download_models.py  setup_ollama.py
src/kabolai/: __init__.py  assistant.py
src/kabolai/actions/: apps.py  base.py  conversation.py  media.py  registry.py  system.py  web.py
src/kabolai/audio/: player.py  recorder.py
src/kabolai/brain/: base.py  factory.py  models.py  ollama_brain.py  prompts.py
src/kabolai/cli/: main.py
src/kabolai/core/: config.py  constants.py  exceptions.py  logging.py  state.py
src/kabolai/gui/: __init__.py  app.py  first_run.py  settings.py  theme.py  widgets.py
src/kabolai/stt/: base.py  factory.py  vosk_engine.py  whisper_engine.py
src/kabolai/tts/: base.py  factory.py  piper_engine.py  pyttsx3_engine.py  ukrainian_engine.py
src/kabolai/ui/: hotkeys.py  icons.py  tray.py
tests/: conftest.py  test_action_registry.py  test_actions.py  test_brain_models.py  test_config.py  test_gui.py  test_ollama_brain.py  test_state.py
